<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="22.5dp"
    android:layout_marginStart="37.5dp" >

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="9dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/premisesName"
	        style="@style/shadowText"
            android:layout_width="727dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/hotel_info"
            android:textSize="31sp"
            android:gravity="center_vertical"
            android:ellipsize="end"/>
     
        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/premisesName"
            android:scaleType="centerInside"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/weather_icon"
            android:layout_alignTop="@id/premisesName"
            android:layout_marginLeft="15dp"
            android:textColor="#FFFFFF"
            android:textSize="31sp"
            style="@style/shadowText"
            android:gravity="center_vertical"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line2"
        android:layout_width="727dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp">
        
   	  <TextView 
        android:id="@+id/welcome"
		style="@style/shadowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center_vertical"
        android:textSize="23.4sp"/> 
      
      <TextView
        android:id="@+id/guestName"
		style="@style/shadowText"
        android:layout_width="727dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/welcome"
        android:text="@string/guest_info"
        android:gravity="center_vertical"
        android:textSize="23.4sp"
        android:ellipsize="end"/>
    </RelativeLayout>


    <RelativeLayout 
         android:id="@+id/message_info_layout"
         android:layout_width="675dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:background="@drawable/message_info_shape"
         android:padding="25dp"
         android:visibility="invisible">
      
        <TextView 
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_title"
            android:maxLines="2"
			android:ellipsize="end"
            style="@style/messageInfoText"/>
     
        <TextView
	        android:id="@+id/message_info"
	        android:layout_width="675dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:layout_below="@id/message_title"
	        style="@style/messageInfoText"
	        android:gravity="center_vertical"
	        android:text="@string/message_info"
	        android:maxLines="7"
	        android:ellipsize="end"/>
               
        <TextView
	        android:id="@+id/message_signature"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentEnd="true"
			android:layout_below="@id/message_info"
	        style="@style/messageInfoText"
	        android:gravity="center_vertical"
	        android:text="@string/message_signature"
	        android:singleLine="true"
	        android:ellipsize="end"/>
        
    </RelativeLayout>

	  <TextView
	       android:id="@+id/date"
	       style="@style/shadowText"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentBottom="true"
	       android:layout_marginBottom="11dp"
	       android:text="@string/date"
	       android:textSize="29sp"/>
	
	   <TextClock
	       android:id="@+id/time"
	       style="@style/shadowText"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/time"
	       android:textSize="52sp"
	       android:layout_marginBottom="-8dp"
	       android:layout_above="@id/date"/>

	   <TextView
	       android:id="@+id/timeLable"
	       style="@style/shadowText"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:textSize="52sp"
	       android:layout_toEndOf="@id/time"
	       android:layout_marginStart="2dp"
	       android:layout_marginBottom="-8dp"
	       android:layout_above="@id/date"/>
	   	
	    <LinearLayout
	        android:id="@+id/arrow_icons"
	        android:layout_width="wrap_content"
	        android:layout_height="38dp"
	        android:orientation="horizontal"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentEnd="true"
	        android:layout_marginEnd="15dp"
	        android:layout_marginBottom="13dp">
        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingEnd="1dp"
	            android:layout_gravity="center_vertical"
	            android:layout_marginBottom="3dp"
	            android:text="@org.droidtv.ui.strings:string/MAIN_BUTTON_OK"
	            style="@style/shadowText"
	            android:textSize="19sp"/>
	        
	        <ImageView
	            android:id="@+id/animation_arrow"
	            android:layout_width="38dp"
	            android:layout_height="38dp"
	            android:scaleType="centerInside"
	            android:src="@drawable/ic_arrow_white"/>
	
	    </LinearLayout>
</RelativeLayout>
